SUBDIRS = geminiweather geminisambaconfig geminimail geminiinadyn geminisync geminiupnpc \
	geminivpn geminirssreader geminiwebcam geminiical geminiftpmount geminidreamnetcast \
	geminicccaminfo geminiushare geminijukebox geminihttpd geminiiadyn gemininfs \
	buttons plugins geminirezapp
installdir = $(datadir)/enigma2/DMConcinnity-HD-Transp/images
install_DATA = *.png use_skin_icons
